enhance the version